--- a/main.ipynb
+++ b/main.ipynb
@@ -606,7 +606,7 @@
     "x=pip.fit_transform(data)\n",
     "y=data['Sales']\n",
     "x_test=pip.fit(data_test)\n",
-    "model_final=RandomForestRegressor()\n",
+    "model_final=RandomForestRegressor(max_depth=18, n_estimators=20, ccp_alpha=0.001)\n",
     "model_final.fit(x, y)\n",
     "print('TRAIN Score: ', model_final.score(x, y),'RMSE: ', (np.sqrt(mean_squared_error(model_final.predict(x), y_train))))\n",
     "data_test['Sales']=model_final.predict(x_test)\n",
