--- a/main.ipynb
+++ b/main.ipynb
@@ -200,7 +200,6 @@
    "source": [
     "#reading data\n",
     "data=pd.read_csv('train.csv')\n",
-    "data_test=pd.read_csv('test.csv')\n",
     "#getting information about the data\n",
     "data.describe()"
    ]
@@ -213,15 +212,15 @@
     {
      "data": {
       "text/plain": [
-       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x7f6d641f77f0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f6d621cddd8>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f6d6218e3c8>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x7f6d6213c978>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f6d620f0f28>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f6d620aa518>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x7f6d6205cac8>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f6d6201b0f0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f6d6201b128>]],\n",
+       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x7f94b92b9668>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f94b728fc50>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f94b7250240>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x7f94b72007f0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f94b71b2da0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f94b716e390>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x7f94b711f940>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f94b7150f28>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f94b7150f60>]],\n",
        "      dtype=object)"
       ]
      },
@@ -452,7 +451,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7f6d616cc3c8>"
+       "<matplotlib.collections.PathCollection at 0x7f94b678b320>"
       ]
      },
      "execution_count": 5,
@@ -484,20 +483,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Splitting into training and validation sets\n",
     "\n",
     "x_train, x_val=train_test_split(data, test_size=0.2, random_state=42)\n",
+    "x_val, x_test=train_test_split(x_val, test_size=0.5, random_state=42)\n",
     "y_train=x_train['Sales']\n",
-    "y_val=x_val['Sales']"
+    "y_val=x_val['Sales']\n",
+    "y_test=x_test['Sales']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {
     "scrolled": false
    },
@@ -516,7 +517,8 @@
     "pip=ColumnTransformer([('scaler', StandardScaler(), num), ('one_hot', OneHotEncoder(), cat)])\n",
     "#for train(split) and validation sets\n",
     "x_train=pip.fit_transform(x_train)\n",
-    "x_val=pip.transform(x_val)"
+    "x_val=pip.transform(x_val)\n",
+    "x_test=pip.transform(x_test)"
    ]
   },
   {
@@ -529,7 +531,7 @@
      "output_type": "stream",
      "text": [
       "TRAIN Score:  0.8311006662213631 RMSE: 22.314463893203595\n",
-      "VAL Score:  0.8309090374763841 RMSE:  22.447376844945993\n"
+      "VAL Score:  0.8298193990346134 RMSE:  22.47551414646589\n"
      ]
     }
    ],
@@ -542,20 +544,20 @@
     "print('VAL Score: ', model.score(x_val, y_val),'RMSE: ', (np.sqrt(mean_squared_error(model.predict(x_val), y_val))))\n",
     "\n",
     "#TRAIN Score:  0.8311006662213631 RMSE: 22.314463893203595\n",
-    "#VAL Score:  0.8309090374763841 RMSE:  22.447376844945993"
+    "#VAL Score:  0.8298193990346134 RMSE:  22.47551414646589"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TRAIN Score:  0.9586337859985531 RMSE:  11.04321115436024\n",
-      "VAL Score:  0.9443682157550336 RMSE:  12.87558273615192\n"
+      "TRAIN Score:  0.9586338179775654 RMSE:  11.043206885767367\n",
+      "VAL Score:  0.9451699438195005 RMSE:  12.75745233362959\n"
      ]
     }
    ],
@@ -566,21 +568,21 @@
     "print('TRAIN Score: ', model2.score(x_train, y_train),'RMSE: ', (np.sqrt(mean_squared_error(model2.predict(x_train), y_train))))\n",
     "print('VAL Score: ', model2.score(x_val, y_val),'RMSE: ', (np.sqrt(mean_squared_error(model2.predict(x_val), y_val))))\n",
     "\n",
-    "#TTRAIN Score:  0.9586337859985531 RMSE:  11.04321115436024\n",
-    "#VAL Score:  0.9443682157550336 RMSE:  12.87558273615192"
+    "#TRAIN Score:  0.9586338179775654 RMSE:  11.043206885767367\n",
+    "#VAL Score:  0.9451699438195005 RMSE:  12.75745233362959"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TRAIN Score:  0.9772334589052626 RMSE:  8.192586129646038\n",
-      "VAL Score: 0.9571821453416332 RMSE:  11.29582228809414\n"
+      "TRAIN Score:  0.977181202538849 RMSE:  8.201983020415012\n",
+      "VAL Score: 0.95728649864808 RMSE:  11.259969017674372\n"
      ]
     }
    ],
@@ -590,13 +592,33 @@
     "model3.fit(x_train, y_train)\n",
     "print('TRAIN Score: ', model3.score(x_train, y_train),'RMSE: ', (np.sqrt(mean_squared_error(model3.predict(x_train), y_train))))\n",
     "print('VAL Score:', model3.score(x_val, y_val),'RMSE: ', (np.sqrt(mean_squared_error(model3.predict(x_val), y_val))))\n",
-    "#TRAIN Score:  0.9772334589052626 RMSE:  8.192586129646038\n",
-    "#VAL Score: 0.9571821453416332 RMSE:  11.29582228809414"
+    "#TRAIN Score:  0.977181202538849 RMSE:  8.201983020415012\n",
+    "#VAL Score: 0.95728649864808 RMSE:  11.259969017674372"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TEST Score: 0.9566781954425717 RMSE:  11.384249620660697\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Clearly, Random Forest performs the best.\n",
+    "\n",
+    "print('TEST Score:', model3.score(x_test, y_test),'RMSE: ', (np.sqrt(mean_squared_error(model3.predict(x_test), y_test))))\n",
+    "#TEST Score: 0.9566781954425717 RMSE:  11.384249620660697"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -605,6 +627,7 @@
     "'''\n",
     "x=pip.fit_transform(data)\n",
     "y=data['Sales']\n",
+    "data_test=pd.read_csv('test.csv')\n",
     "x_test=pip.transform(data_test)\n",
     "model_final=RandomForestRegressor(max_depth=18, n_estimators=20, ccp_alpha=0.001)\n",
     "model_final.fit(x, y)\n",
